--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
             <div class="gallery-item slide-up">
                   <p> If you want a little bit of headache just look at these. These images reflect the passion, creativity, and problem-solving spirit of Computer Science. 
             From coding to cybersecurity and research, it's a field that never stops evolving.</p>
-                <img src="images/download (8).jfif"  width=" 250px" height="250px"  />
+                <img src="images/download (8).jpg"  width=" 250px" height="250px"  />
             </div>
             <div class="gallery-item slide-up">
-                <img src="images/keep going.jfif"  width=" 250px" height="250px"/>
+                <img src="images/keep going.jpg"  width=" 250px" height="250px"/>
                 <p> Every great project starts with a single line of code. Stay curious, keep building, and never stop debugging</p>
             </div> 
             <div class="gallery-item slide-up">
                   <p> They say there's a lot of money here, but what I know is that the ones with a lot of money are the corrupt politicians. CHAROT </p>
-                <img src="images/money.jfif"  width=" 250px" height="250px"  />
+                <img src="images/money.jpg"  width=" 250px" height="250px"  />
             </div>
 
 
@@ -196,3 +196,4 @@
     </footer>
 </body>
 </html>
+
