--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
     <title>My Website</title>
     <link href="style.css" rel="stylesheet">
+    <img src="eto.jpg"/>
 </head>
 <body>
     <!-- Navigation -->
@@ -196,5 +197,6 @@
     </footer>
 </body>
 </html>
+
 
 
