--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     
     <title>My Website</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -196,6 +196,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
