--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     
     <title>My Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=4">
+
 </head>
 <body>
     
@@ -196,6 +197,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
